Fix headings spacing

--- a/src/globals.css
+++ b/src/globals.css
@@ -127,7 +127,6 @@ p {
 
 .caption {
   font-size: 0.85rem;
-  margin-bottom: 1rem;
 }
 
 ul {
